# SkySense

./: .gitignore  AGENTS.md  CLAUDE.md  Goal.md  LICENSE  PROJECT_STATUS.md  README.md  analysis.md  hc_sr04_distance.py  logic.py  main.py  package.xml  requirements.txt  setup.cfg  setup.py
.claude/: settings.local.json
.orchestrator/: plan.md
.orchestrator/bugs/: closed_loop_divergence.md
.orchestrator/instructions/: agent_1.md  agent_1_wave3.md  agent_2.md  agent_2_wave3.md  agent_3.md  agent_3_wave3.md  agent_a_wave4.md  agent_a_wave5.md  agent_b_wave4.md  agent_b_wave5.md  agent_c_wave4.md  agent_c_wave5.md  wave4_frontend_plan.md  wave5_plan.md
.orchestrator/status/: agent_1_status.md  agent_1_wave3_status.md  agent_2_status.md  agent_2_wave3_status.md  agent_3_status.md  agent_3_wave3_status.md
Logic/: CLAUDE.md  README.md  main.py  requirements.txt  run_rplidar.sh  server.py
Logic/core/: __init__.py
Logic/hardware/: __init__.py  rplidar_reader.py
Logic/lidar/: GPIO_MODE_CHANGES.md  RPLIDAR_GPIO_WIRING.md  __init__.py  example_gpio_mode.py  rplidar_reader.py  (+1 more)
demos/: run_demos.py
legacy/rplidar_ros2/: CMakeLists.txt  package.xml  setup.cfg
legacy/rplidar_ros2/rplidar_ros2/: rplidar_protocol.py
rplidar_ros2/: STRUCTURE.md
showcase/: CLAUDE.md
simulation/: lidar_sim.py
src/: __init__.py
tests/: conftest.py  test_closed_loop.py  test_control_config.py  test_drone_model.py  test_ekf.py  test_motor_mixer.py  test_motor_model.py  test_pid.py  test_quaternion.py  test_rotations.py
visualization/: __init__.py  lidar_visualization.py
(+154 files in other folders)
